# meilisearch

./: .dockerignore  .gitattributes  .gitignore  .rustfmt.toml  .spectral.yaml  .travis.yml  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Cross.toml  Dockerfile  GETTING_STARTED.md  LICENSE  LICENSE-EE  LICENSE-EE.md  LICENSE-MIT  LICENSE.md  Makefile  PROFILING.md  Procfile  README.md  README_LOCAL_BUILD.md  SECURITY.md  TESTING.md  app.json  azure-pipelines.yml  bors.toml  build.rs  bump.sh  chinese-words.txt  clippy.toml  config.toml  deep-dive.md  deploy-ugly.sh  docker-compose.cluster.yml  (+17 more)
benchmarks/: .gitignore  Cargo.toml  README.md  build.rs
benchmarks/benches/: formatting.rs  indexing.rs  search_geo.rs  search_songs.rs  search_wiki.rs  songs.rs  utils.rs  wiki.rs
benchmarks/scripts/: compare.sh  list.sh
build-info/: Cargo.toml  build.rs
build-info/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
cluster/: Cargo.toml
cluster/src/: batch.rs  leader.rs  lib.rs
diff-indexes/: Cargo.toml
diff-indexes/src/: compare.rs  main.rs
document-formats/: Cargo.toml
document-formats/src/: lib.rs
dump/: Cargo.toml  README.md
dump/src/: error.rs  lib.rs  new_writer.rs  writer.rs
dump/src/reader/: error.rs  mod.rs  v6.rs
dump/tests/assets/: v1.dump  v2-v0.22.0.dump  v6-with-experimental.dump  v6-with-vectors.dump
file-store/: Cargo.toml
file-store/src/: lib.rs
filter-parser/: Cargo.toml  README.md
filter-parser/fuzz/: .gitignore  Cargo.toml
filter-parser/src/: condition.rs  error.rs  lib.rs  main.rs  value.rs
flatten-serde-json/: Cargo.toml
flatten-serde-json/fuzz/: Cargo.toml
flatten-serde-json/fuzz/fuzz_targets/: flatten.rs
flatten-serde-json/src/: lib.rs
fuzzers/: Cargo.toml
fuzzers/src/: lib.rs
helpers/: Cargo.toml
helpers/src/: main.rs
http-ui/: Cargo.toml
http-ui/public/: bulma.min.css  filesize.min.js  script.js  style.css  updates-script.js
http-ui/src/: documents_from_csv.rs  main.rs  update_store.rs
http-ui/templates/: index.html  updates.html
index-scheduler/: Cargo.toml
index-scheduler/src/: autobatcher.rs  batch.rs  error.rs  features.rs  index_mapper.rs  index_scheduler.rs  insta_snapshot.rs  lib.rs  lru.rs  panic_hook.rs  snapshot.rs  task.rs  update_file_store.rs  utils.rs  uuid_codec.rs
index-scheduler/src/index/: error.rs  index.rs  mod.rs  updates.rs
index-scheduler/src/index_mapper/: index_map.rs  mod.rs
index-scheduler/src/snapshots/: index_scheduler__tests__document_addition-2.snap  index_scheduler__tests__document_addition-3.snap  index_scheduler__tests__document_addition.snap  index_scheduler__tests__import_vectors-12.snap  index_scheduler__tests__import_vectors-2.snap  index_scheduler__tests__import_vectors-22.snap  index_scheduler__tests__import_vectors-5.snap  index_scheduler__tests__import_vectors-6.snap  index_scheduler__tests__import_vectors-9.snap  index_scheduler__tests__import_vectors.snap  index_scheduler__tests__insert_task_while_another_task_is_processing.snap  index_scheduler__tests__register.snap  index_scheduler__tests__settings_update-2.snap  index_scheduler__tests__settings_update-3.snap  index_scheduler__tests__settings_update-5.snap  (+8 more)
index-stats/: Cargo.toml
index-stats/src/: main.rs
infos/: Cargo.toml
infos/src/: main.rs
inspecting-allocator/: Cargo.toml
inspecting-allocator/src/: lib.rs
meili-snap/: Cargo.toml
meili-snap/src/: lib.rs
meilidb/: Cargo.toml
meilidb-core/: Cargo.toml
meilidb-core/examples/: from_file.rs
meilidb-core/src/: automaton.rs  database.rs  distinct_map.rs  error.rs  index.rs  lib.rs  main.rs  number.rs  query_builder.rs  query_enhancer.rs  ranked_map.rs  raw_document.rs  raw_indexer.rs  reordered_attrs.rs  shared_data_cursor.rs  store.rs  write_to_bytes.rs
meilidb-data/: Cargo.toml
meilidb-data/src/: cf_tree.rs  database.rs  document_attr_key.rs  index_event.rs  indexer.rs  lib.rs  number.rs  ranked_map.rs  schema.rs
meilidb-data/tests/: common.rs  custom_settings_index.rs  database.rs  index.rs  updates.rs
meilidb-http/: Cargo.toml  build.rs
meilidb-http/src/: data.rs  error.rs  lib.rs  main.rs  option.rs
meilidb-schema/: Cargo.toml
meilidb-schema/src/: lib.rs
meilidb/examples/: create-database.rs  query-database.rs
meilidb/src/: lib.rs  main.rs  sort_by_attr.rs
meilisearch-auth/: Cargo.toml
meilisearch-auth/src/: action.rs  dump.rs  error.rs  key.rs  lib.rs  store.rs
meilisearch-core/: Cargo.toml
meilisearch-core/benches/: search_benchmark.rs
meilisearch-core/examples/: from_file.rs
meilisearch-core/src/: bucket_sort.rs  criterion2.rs  database.rs  distinct_map.rs  error.rs  facets.rs  fields_map.rs  levenshtein.rs  lib.rs  number.rs  query_builder.rs  query_enhancer.rs  query_tree.rs  query_words_mapper.rs  ranked_map.rs  raw_document.rs  raw_indexer.rs  reordered_attrs.rs  settings.rs
meilisearch-error/: Cargo.toml
meilisearch-error/src/: lib.rs
meilisearch-filters/: Cargo.toml
meilisearch-filters/src/: filter.rs  lib.rs
meilisearch-http/: Cargo.toml  build.rs
meilisearch-http/_tests/: dump.rs  index.rs
meilisearch-http/proto/: raft_service.proto
meilisearch-http/public/: interface.html
meilisearch-http/src/: _raft.rs  analytics.rs  backup.rs  cors.rs  data.rs  dump.rs  error.rs  lib.rs  main.rs  metrics.rs  option.rs  route_metrics.rs  search.rs  snapshot.rs  snapshot_old.rs  task.rs
meilisearch-http/tests/: backup.rs  common.rs  content_type.rs  dashboard.rs  documents_add.rs  documents_delete.rs  documents_get.rs  dump.rs  dumps.rs  errors.rs  health.rs  index.rs  index_creations.rs  index_update.rs  integration.rs  lazy_index_creation.rs  placeholder_search.rs  search.rs  search_settings.rs  settings.rs  settings_accept_new_fields.rs  settings_ranking.rs  settings_ranking_rules.rs  settings_stop_words.rs  url_normalizer.rs
meilisearch-lib/: Cargo.toml
meilisearch-lib/src/: analytics.rs  compression.rs  document_formats.rs  error.rs  lib.rs  options.rs  snapshot.rs  update_file_store.rs
(+3754 files in other folders)
