[workspace]
resolver = "2"
members = [
    "crates/meilisearch",
    "crates/meilitool",
    "crates/meilisearch-types",
    "crates/meilisearch-auth",
    "crates/meili-snap",
    "crates/index-scheduler",
    "crates/dump",
    "crates/file-store",
    "crates/permissive-json-pointer",
    "crates/milli",
    "crates/filter-parser",
    "crates/flatten-serde-json",
    "crates/json-depth-checker",
    "crates/benchmarks",
    "crates/fuzzers",
    "crates/tracing-trace",
    "crates/xtask",
    "crates/build-info",
]

[workspace.package]
version = "1.15.2"
authors = [
    "Quentin de Quelen <quentin@dequelen.me>",
    "Clément Renault <clement@meilisearch.com>",
]
description = "Meilisearch HTTP server"
homepage = "https://meilisearch.com"
readme = "README.md"
edition = "2021"
license = "MIT"

[profile.release]
codegen-units = 1

# We now compile heed without the NDEBUG define for better performance.
# However, we still enable debug assertions for a better detection of
# disk corruption on the cloud or in OSS.
[profile.release.package.heed]
debug-assertions = true

[profile.dev.package.flate2]
opt-level = 3

[profile.dev.package.grenad]
opt-level = 3
[profile.dev.package.roaring]
opt-level = 3

[workspace.dependencies]
actix-cors = "0.7.1"
actix-http ="3.11.0"
actix-rt = "2.10.0"
actix-utils = "3.0.1"
actix-web = "4.11.0"
actix-web-lab = "0.24.1"
allocator-api2 = "0.3.0"
anyhow = "1.0.98"
arbitrary = "1.4.1"
arroy = "0.6.1"
async-openai = { git = "https://github.com/meilisearch/async-openai", branch = "better-error-handling" }
base64 = "0.22.1"
bbqueue.git = "https://github.com/meilisearch/bbqueue"
big_s = "1.0.2"
bimap = "0.6.3"
bincode = "1.3.3"
brotli = "8.0.1"
bstr = "1.12.0"
bumpalo = "3.18.1"
bumparaw-collections = "0.1.4"
byte-unit = "5.1.6"
bytemuck = "1.23.1"
byteorder = "1.5.0"
bytes = "1.10.1"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
cargo_toml = "0.22.1"
charabia = "0.9.6"
clap = "4.5.40"
color-spantrace = "0.3.0"
concat-arrays = "0.1.2"
convert_case = "0.8.0"
criterion = "0.6.0"
crossbeam-channel = "0.5.15"
csv = "1.3.1"
derive_builder = "0.20.2"
deserr = "0.6.3"
either = "1.15.0"
enum-iterator = "2.1.0"
fastrand = "2.3.0"
flate2 = "1.1.2"
flume = "0.11.1"
fst = "0.4.7"
futures = "0.3.31"
futures-util = "0.3.31"
fxhash = "0.2.1"
fxprof-processed-profile = "0.7.0"
geoutils = "0.5.1"
grenad = "0.5.0"
hashbrown = "0.15.4"
heed = "0.22.0"
hex = "0.4.3"
hf-hub = { git = "https://github.com/dureuill/hf-hub.git", branch = "rust_tls" }
hmac = "0.12.1"
http = "1.3.1"
indexmap = "2.9.0"
insta = "=1.39.0"              # fixed version due to format breakages in v1.40
is-terminal = "0.4.16"
itertools = "0.14.0"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
levenshtein_automata = "0.2.1"
libproc = "0.14.10"
liquid = "0.26.11"
lru = "0.14.0"
manifest-dir-macros = "0.1.18"
maplit = "1.0.2"
md5 = "0.7.0"
memchr = "2.7.5"
memmap2 = "0.9.5"
mimalloc = "0.1.47"
mime = "0.3.17"
mopa-maintained = "0.2.3"
nom = "7.1.3"
nom_locate = "4.2.0"
num_cpus = "1.17.0"
obkv = "0.3.0"
once_cell = "1.21.3"
ordered-float = "5.0.0"
page_size = "0.6.0"
parking_lot = "0.12.4"
pin-project-lite = "0.2.16"
platform-dirs = "0.3.0"
prometheus = "0.14.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
regex = "1.11.1"
regex-lite = "0.1.6"
reqwest = "0.12.20"
rhai = "1.22.2"
roaring = "0.10.12"
rstar = "0.12.2"
rustc-hash = "2.1.1"
rustls = "0.23.28"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
secrecy = "0.10.3"
segment = "0.2.6"
serde = "1.0.219"
serde-cs = "0.2.4"
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
sha-1 = "0.10.1"
sha2 = "0.10.9"
siphasher = "1.0.1"
slice-group-by = "0.3.1"
smallstr = "0.3.0"
smallvec = "1.15.1"
smartstring = "1.0.1"
static-files = "0.2.5"
synchronoise = "1.0.1"
sysinfo = "0.35.2"
tar = "0.4.44"
temp-env = "0.3.6"
tempfile = "3.20.0"
termcolor = "1.4.1"
thiserror = "2.0.12"
thread_local = "1.1.9"
tiktoken-rs = "0.7.0"
time = "0.3.41"
tokenizers = { git = "https://github.com/huggingface/tokenizers.git", tag = "v0.15.2", version = "0.15.2" }
tokio = "1.45.1"
toml = "0.8.23"
tracing = "0.1.41"
tracing-actix-web = "0.7.18"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.19"
unescaper = "0.1.6"
ureq = "2.12.1"
url = "2.5.4"
urlencoding = "2.1.3"
utoipa = "5.4.0"
utoipa-scalar = "0.3.0"
uuid = "1.17.0"
vergen-git2 = "1.0.7"
wiremock = "0.6.3"
yaup = "0.3.1"
zip = "4.1.0"
