[package]
name = "build-info"
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.36", features = ["parsing"] }

[build-dependencies]
anyhow = "1.0.86"
vergen-git2 = "1.0.0-beta.2"
