[package]
name = "cli"
version = "0.30.0"
edition = "2018"
description = "A CLI to interact with a milli index"
publish = false

[dependencies]
indicatif = "0.16.2"
serde = "1.0.136"
serde_json = "1.0.79"
structopt = "0.3.26"
milli = { path = "../milli" }
eyre = "0.6.7"
color-eyre = "0.6.1"
heed = { git = "https://github.com/meilisearch/heed", tag = "v0.12.1", default-features = false, features = ["lmdb", "sync-read-txn"] }
byte-unit = { version = "4.0.14", features = ["serde"] }
bimap = "0.6.2"
csv = "1.1.6"
stderrlog = "0.5.1"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = "0.3.2"
