[package]
name = "cli"
version = "0.33.4"
edition = "2018"
description = "A CLI to interact with a milli index"
publish = false

[dependencies]
bimap = "0.6.2"
byte-unit = { version = "4.0.14", features = ["serde"] }
color-eyre = "0.6.1"
csv = "1.1.6"
eyre = "0.6.7"
indicatif = "0.16.2"
milli = { path = "../milli" }
mimalloc = { version = "0.1.29", default-features = false }
serde = "1.0.136"
serde_json = "1.0.79"
stderrlog = "0.5.1"
structopt = "0.3.26"
