[package]
name = "filter-parser"
description = "The parser for the Meilisearch filter syntax"
publish = false

version.workspace = true
authors.workspace = true
# description.workspace = true
homepage.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nom = "7.1.3"
nom_locate = "4.2.0"
unescaper = "0.1.3"

[dev-dependencies]
insta = "1.34.0"
