[package]
name = "flatten-serde-json"
version = "0.1.0"
edition = "2021"
description = "Flatten serde-json objects like elastic search"
readme = "README.md"
author = ["Tamo tamo@meilisearch.com"]
repository = "https://github.com/irevoire/flatten-serde-json"
keywords = ["json", "flatten"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
