[package]
name = "flatten-serde-json"
version = "0.36.0"
edition = "2021"
description = "Flatten serde-json objects like elastic search"
readme = "README.md"
publish = false

[dependencies]
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
