[package]
name = "helpers"
version = "0.7.1"
authors = ["Clément Renault <clement@meilisearch.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
byte-unit = { version = "4.0.9", default-features = false, features = ["std"] }
heed = { git = "https://github.com/Kerollmops/heed", tag = "v0.12.0" }
milli = { path = "../milli" }
stderrlog = "0.5.1"
structopt = { version = "0.3.21", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = "0.3.2"
