[package]
name = "http-ui"
description = "The HTTP user interface of the milli search engine"
version = "0.26.1"
authors = ["Clément Renault <clement@meilisearch.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.56"
byte-unit = { version = "4.0.14", default-features = false, features = ["std"] }
crossbeam-channel = "0.5.2"
heed = { git = "https://github.com/meilisearch/heed", tag = "v0.12.1" }
memmap2 = "0.5.3"
milli = { path = "../milli" }
once_cell = "1.10.0"
rayon = "1.5.1"
structopt = { version = "0.3.26", default-features = false, features = ["wrap_help"] }
tempfile = "3.3.0"

# http server
askama = "0.11.1"
askama_warp = "0.12.0"
bytes = "1.1.0"
either = "1.6.1"
flate2 = "1.0.22"
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = { version = "0.1.8", default-features = false, features = ["sync"] }
warp = "0.3.2"

# logging
log = "0.4.14"
stderrlog = "0.5.1"
fst = "0.4.7"

# Temporary fix for bitvec, remove once fixed. (https://github.com/bitvecto-rs/bitvec/issues/105)
funty = "2.0.0"
bimap = "0.6.2"
csv = "1.1.6"

[dev-dependencies]
maplit = "1.0.2"
serde_test = "1.0.136"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = "0.3.2"
