[package]
name = "infos"
version = "0.8.1"
authors = ["Clément Renault <clement@meilisearch.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
byte-unit = { version = "4.0.9", default-features = false, features = ["std"] }
csv = "1.1.5"
heed = { git = "https://github.com/Kerollmops/heed", tag = "v0.12.1" }
milli = { path = "../milli" }
roaring = "0.6.6"
serde_json = "1.0.62"
stderrlog = "0.5.1"
structopt = { version = "0.3.21", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = "0.3.2"
