[package]
name = "infos"
version = "0.29.0"
authors = ["Clément Renault <clement@meilisearch.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.56"
byte-unit = { version = "4.0.14", default-features = false, features = ["std"] }
csv = "1.1.6"
heed = { git = "https://github.com/meilisearch/heed", tag = "v0.12.1" }
milli = { path = "../milli" }
roaring = "0.9.0"
serde_json = "1.0.79"
stderrlog = "0.5.1"
structopt = { version = "0.3.26", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = "0.3.2"
