[package]
name = "meili-snap"
publish = false

version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
insta = { version = "^1.19.1", features = ["json", "redactions"] }
md5 = "0.7.0"
once_cell = "1.15"
